--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ src="https://www.facebook.com/tr?id=202003319455207&amp;ev=PageView&amp;noscript
 </head>
     <body oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
         <div class="container">
-            <h1 style="text-align: center; color: #fff"><img data-src="assets/img/logotekat.webp" class="navbar-brand lazyloaded" width="200px" height="65px" alt="TEKAT4D" src="assets/img/logotekat.webp"></h1>
+            <h1 style="text-align: center; color: #fff"><img data-src="https://tekat4d.pages.dev/logotekat.webp" class="navbar-brand lazyloaded" width="200px" height="65px" alt="TEKAT4D" src="assets/img/logotekat.webp"></h1>
             <div target="_blank" style="display: flex">
                    <!-- <img loading="lazy" src="assets/img/tekatqris.webp" style="width: 60%; margin: 0 auto; border-radius: 15px;" /> --> 
             </div>
