--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEKAT4D - Bandar Slot Online RTP Tergacor Jackpot Maxwin</title>
+    <meta name="description" content="TEKAT4D adalah bandar slot online rtp tergacor jackpot maxwin, dengan minimal deposit 10RB dan bisa deposit pakai Pulsa , Ewallet, Bank Transfer, QRIS. Hanya Dengan 1 User ID Anda bisa bermain semua jenis game disini.">
 
     
     <link rel="manifest" href="manifest.html">
